Première version du QIF finalisé :+1:

--- a/style_common.css
+++ b/style_common.css
@@ -109,17 +109,21 @@ h2,
 /* QIF */
 .form_qif td{
   padding: 2px;
+  text-align:center;
+}
+.form_qif td:first-child{
+  text-align:left;
 }
 .table_qif td{
     text-align: center;
-    border:1px solid #FFFFFF;
+    border:0px solid #FFFFFF;
 }
 .td_question{
     text-align: left !important;
     padding: 20px 0 20px 0 !important;
 }
 .tr_question td{
-    /*padding: 15px 0 15px 0 !important;*/
+    padding: 7px 3px 3px 0px !important;
     /*vertical-align: bottom;*/
 }
 .info{
@@ -127,4 +131,11 @@ h2,
     font-size:15px;
     vertical-align: top;
     color:#444444;
+}
+.subtitle td{
+  text-align:center;
+  vertical-align: top;
+}
+.altern_color{
+  background-color:#DEDEDE
 }
