--- a/style_common.css
+++ b/style_common.css
@@ -31,6 +31,14 @@ td input{
   margin:10px;
 }
 
+.italic {
+    font-style: italic;
+}
+
+.red {
+    color: #c41723;
+}
+
 .common_h1{
 text-align:center;
 margin:auto;
@@ -115,7 +123,6 @@ h2,
 }
 
 /* ASAS AXIALE */
-
 .bold {
     font-weight: bold;
 }
@@ -129,6 +136,7 @@ h2,
     color: blue;
 }
 
-.red {
-    color: #c41723;
+/* ASAS PERIPHERIQUE */
+.small {
+    font-size: 0.8em;
 }
