--- a/style_common.css
+++ b/style_common.css
@@ -31,6 +31,16 @@ td input{
   margin:10px;
 }
 
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .italic {
     font-style: italic;
 }
@@ -174,20 +184,12 @@ fieldset {
 #text1, #text2 {
     color: #c41723;
     font-size: 1.2em;
-    margin-left: 50px;
 }
 
-#text2 {
-    margin-top: 92px;
+.result1 {
     margin-left: 80px;
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
+#text2 {
+    margin-left: 110px;
 }
