Finalisation outils SNMR ACR 2010.

--- a/style_common.css
+++ b/style_common.css
@@ -85,6 +85,7 @@ h2,
 
 }
 
+.input_score,
 .score_result input{
   width:40px;
   height:30px;
@@ -160,4 +161,8 @@ h2,
 .acr_2010 td{
     vertical-align: center;
     text-align: center;
+}
+
+.acr_2010 .score_subtitle{
+  text-align:right;
 }
