--- a/style_common.css
+++ b/style_common.css
@@ -31,6 +31,20 @@ td input{
   margin:10px;
 }
 
+[type="checkbox"]{
+  width:20px;
+  height:20px;
+}
+
+[type="radio"]{
+  width:17px;
+  height:17px;
+}
+/*
+input:disabled, textarea:disable{
+  color:
+}*/
+
 .italic {
     font-style: italic;
 }
@@ -90,7 +104,7 @@ h2,
   width:40px;
   height:30px;
   font-size:20px;
-  color:#c41723;
+  color:#c41723 !important;
   font-weight: bold;
   text-align: center;
 }
